--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,7 +25,9 @@
       <p>New User? <a href="{{ url_for('register') }}">Click to
         Register!</a>
       </p>
-      <!-- add forgot password here -->
+      <p>
+        Forgot Your Password? <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+      </p>
     </div>
   </div>
 {% endblock %}
